# ros2_realtime_statistics

./: .gitignore  README.md
data/: controller_nrt_stats.json  controller_rt_stats.json  controller_stats.json  driver_nrt_stats.json  driver_rt_stats.json  driver_stats.json
data/from_start/: controller_nrt_stats.json  controller_rt_stats.json  driver_nrt_stats.json  driver_rt_stats.json
data/not_stressed/: controller_nrt_stats.json  controller_rt_stats.json  driver_nrt_stats.json  driver_rt_stats.json
data/stressed/: controller_rt_stats.json  driver_rt_stats.json
json_from_msgs/: package.xml  setup.cfg  setup.py
plot/: controller_stats.json  plot_json.py
src/realtime_statistics/: package.xml  setup.cfg  setup.py
src/realtime_statistics/realtime_statistics/: plot_json.py  write_json.py
