<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realtime_statistics</name>
  <version>0.0.1</version>
  <description>Data retriever for realtime pendulum</description>
  <maintainer email="erwin.lejeune15@gmail.com">erwin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pendulum_msgs_v2</exec_depend>
</package>
